// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrays 1`] = `
<span>
  <div
    class="root svelte-v4o7vv"
  >
    <span
      class="svelte-v4o7vv"
    >
      <label
        class="svelte-v4o7vv"
        for="numbers"
      >
        numbers
      </label>
       
      <textarea
        class="svelte-v4o7vv"
        id="numbers"
      />
       
    </span>
    <span
      class="svelte-v4o7vv"
    >
      <label
        class="svelte-v4o7vv"
        for="strings"
      >
        strings
      </label>
       
      <textarea
        class="svelte-v4o7vv"
        id="strings"
      />
       
    </span>
    <span
      class="svelte-v4o7vv"
    >
      <label
        class="svelte-v4o7vv"
        for="empty"
      >
        empty
      </label>
       
      <textarea
        class="svelte-v4o7vv"
        id="empty"
      />
       
    </span>
  </div>
  <!--&lt;Properties&gt;-->
</span>
`;

exports[`Native types 1`] = `
<span>
  <div
    class="root svelte-v4o7vv"
  >
    <span
      class="svelte-v4o7vv"
    >
      <label
        class="svelte-v4o7vv"
        for="name"
      >
        name
      </label>
       
      <input
        class="svelte-v4o7vv"
        id="name"
      />
       
    </span>
    <span
      class="svelte-v4o7vv"
    >
      <label
        class="svelte-v4o7vv"
        for="age"
      >
        age
      </label>
       
      <input
        class="svelte-v4o7vv"
        id="age"
        type="number"
      />
       
    </span>
    <span
      class="svelte-v4o7vv"
    >
      <label
        class="svelte-v4o7vv"
        for="hasSigned"
      >
        hasSigned
      </label>
       
      <input
        class="svelte-v4o7vv"
        id="hasSigned"
        type="checkbox"
      />
       
    </span>
  </div>
  <!--&lt;Properties&gt;-->
</span>
`;

exports[`Objects 1`] = `
<span>
  <div
    class="root svelte-v4o7vv"
  >
    <span
      class="svelte-v4o7vv"
    >
      <label
        class="svelte-v4o7vv"
        for="numbers"
      >
        numbers
      </label>
       
      <textarea
        class="svelte-v4o7vv"
        id="numbers"
      />
       
    </span>
    <span
      class="svelte-v4o7vv"
    >
      <label
        class="svelte-v4o7vv"
        for="strings"
      >
        strings
      </label>
       
      <textarea
        class="svelte-v4o7vv"
        id="strings"
      />
       
    </span>
    <span
      class="svelte-v4o7vv"
    >
      <label
        class="svelte-v4o7vv"
        for="empty"
      >
        empty
      </label>
       
      <textarea
        class="svelte-v4o7vv"
        id="empty"
      />
       
    </span>
  </div>
  <!--&lt;Properties&gt;-->
</span>
`;
